Fix for bug #6008: MySQL does not create warnings when creating database and using IF NOT EXISTS   produce warning for 'create database if not exists' if database exists   do not update database options in this case   produce warning for 'create table if not exists' if table exists